- Fixed new Profile overflowing when editing page zones.

--- a/RockWeb/Themes/Rock/Styles/_newprofile.less
+++ b/RockWeb/Themes/Rock/Styles/_newprofile.less
@@ -93,7 +93,7 @@
 @media (min-width: 647px) {
   .profile-main {
     flex: 0 0 auto;
-    width: 40%;
+    width: 40% !important;
   }
 
   .profile-notes {
@@ -120,7 +120,7 @@
 
   .profile-main {
     flex: 0 0 auto;
-    width: 25%;
+    width: 25% !important;
   }
 
   .profile-notes {
@@ -131,7 +131,7 @@
 @media (min-width: @screen-lg) {
   .profile-main {
     flex: 0 0 auto;
-    width: 20%;
+    width: 20% !important;
   }
 }
 
